--- a/public/testing/assets/css/style.css
+++ b/public/testing/assets/css/style.css
@@ -9,10 +9,18 @@ body {
   background: transparent;
 }
 
+.container {
+  width: 80%;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../Pictures/Egg\ banner-01.jpg") center no-repeat;
+  background: #040404 url("../Pictures/Egg banner-01.jpg") center no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
